add testes unitarios e de integracao de pedido